--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sonic Hoshi DX</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0b0b0b;
+      color: #ffffff;
+    }
+    header {
+      background: linear-gradient(135deg, #1e90ff, #00bfff);
+      padding: 60px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 3em;
+      margin: 0;
+    }
+    nav {
+      background-color: #111;
+      padding: 10px 0;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #00bfff;
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+    .media img {
+      width: 100%;
+      max-width: 600px;
+      margin: 20px 0;
+      border-radius: 10px;
+    }
+    .download {
+      text-align: center;
+      margin-top: 40px;
+    }
+    .download a {
+      background-color: #00bfff;
+      color: #fff;
+      padding: 15px 30px;
+      text-decoration: none;
+      font-size: 1.2em;
+      border-radius: 5px;
+      display: inline-block;
+    }
+    footer {
+      background-color: #111;
+      color: #aaa;
+      text-align: center;
+      padding: 30px 20px;
+    }
+    .credits ul {
+      list-style: none;
+      padding: 0;
+    }
+    .credits li {
+      margin: 5px 0;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Sonic Hoshi DX </h1>
+    <p>A complete reimagining of the original Sonic Hoshi project, built from the ground up to deliver a richer, more polished experience.</p>
+  </header>
+
+  <nav>
+    <a href="#story">Story</a>
+    <a href="#features">Features</a>
+    <a href="#media">Media</a>
+    <a href="#download">Download</a>
+    <a href="#credits">Credits</a>
+  </nav>
+
+  <section id="story">
+    <h2>Story</h2>
+    <p>
+      bruh
+    </p>
+  </section>
+
+  <section id="features">
+    <h2>Features</h2>
+    <ul>
+      <li>Classic 2D platforming action reminiscent of the Sega Genesis era</li>
+      <li>Explore Starshine Island!</li>
+      <li>Multiple playable characters!</li>
+    </ul>
+  </section>
+
+  <section id="media" class="media">
+    <h2>Media</h2>
+    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/ssz.png" alt="Gameplay Screenshot 1" />
+  </section>
+
+  <section id="download" class="download">
+    <h2>Download</h2>
+    <p>Where is the demo buddy.</p>
+    <a href="https://gamejolt.com/games/sonichoshi/751415" target="_blank">Download on Game Jolt</a>
+  </section>
+
+  <section id="credits" class="credits">
+    <h2>Credits</h2>
+    <ul>
+      <li><strong>Developer:</strong> jao583</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>Sonic Hoshi is a fan-made project and is not affiliated with SEGA or Sonic Team.</p>
+    <p>TEAM CELESTIAL</p>
+  </footer>
+
+</body>
+</html>
 
