--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sonic Hoshi DX</title>
+  <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/logo.png" alt="Sonic Hoshi DX Logo" style="max-width: 90%; height: auto;">
   <style>
     body {
       margin: 0;
@@ -12,7 +12,7 @@
       color: #ffffff;
     }
     header {
-      background: linear-gradient(135deg, #1e90ff, #00bfff);
+      background: linear-gradient(135deg, #A9A9A9, #222222);
       padding: 60px 20px;
       text-align: center;
     }
@@ -52,7 +52,7 @@
       margin-top: 40px;
     }
     .download a {
-      background-color: #00bfff;
+      background-color: #000000;
       color: #fff;
       padding: 15px 30px;
       text-decoration: none;
