--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       margin: auto;
     }
     h2 {
-      color: #00bfff;
+      color: #800080;
       font-size: 2em;
       margin-bottom: 20px;
     }
