--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section id="story">
     <h2>Story</h2>
     <p>
-      bruh
+      Dr. Eggman sets his sights on Starshine Island to take it for himself after learning of the myth surrounding the Celestial Star, a potent relic believed to have the ability to manipulate space and time. Eggman intends to rewrite the world in his image with his most recent and dangerous creation, REDACTED, which is powered by the artifact itself. However, Sonic and Tails are ambushed in midair as they arrive to look into strange readings, which sends them plummeting into an enigmatic new adventure. Sonic has to work quickly to stop Eggman before reality itself is permanently altered because he is alone, outmatched, and up against a threat unlike any other.
     </p>
   </section>
 
