--- a/index.html
+++ b/index.html
@@ -112,14 +112,35 @@
 
   <section id="download" class="download">
     <h2>Download</h2>
-    <p>Where is the demo buddy.</p>
+    <p>While we don't have a demo for the new version, check out the original Sonic Hoshi!</p>
     <a href="https://gamejolt.com/games/sonichoshi/751415" target="_blank">Download on Game Jolt</a>
   </section>
 
   <section id="credits" class="credits">
     <h2>Credits</h2>
     <ul>
-      <li><strong>Developer:</strong> jao583</li>
+      <li><strong>Original Sonic Hoshi credits:</strong> 
+        Glace Sue
+        SpookyGuga Bosses / Cutscenes / Programming and Sprites.
+        Nuclear
+        troopsushi
+        
+        -------------------------------
+        
+        Contributions -
+        Michaelwave
+        Beta Nexus
+        Emma
+        Rosabelle
+        Saneko
+        Hazel
+        Darkn
+        joshyflip
+        Dolphman
+        Wiz
+        ChrisFurry
+        Spitfya 
+        </li>
     </ul>
   </section>
 
