--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <h2>Features</h2>
     <ul>
       <li>Classic 2D platforming action reminiscent of the Sega Genesis era</li>
-      <li>Explore Starshine Island!</li>
-      <li>Multiple playable characters!</li>
+      <li>9 zones to explore</li>
+      <li>Multiple playable characters</li>
     </ul>
   </section>
 
