--- a/index.html
+++ b/index.html
@@ -120,26 +120,7 @@
     <h2>Credits</h2>
     <ul>
       <li><strong>Original Sonic Hoshi credits:</strong> 
-        Glace Sue
-        SpookyGuga Bosses / Cutscenes / Programming and Sprites.
-        Nuclear
-        troopsushi
-        
-        -------------------------------
-        
-        Contributions -
-        Michaelwave
-        Beta Nexus
-        Emma
-        Rosabelle
-        Saneko
-        Hazel
-        Darkn
-        joshyflip
-        Dolphman
-        Wiz
-        ChrisFurry
-        Spitfya 
+        Glace Sue SpookyGuga Nuclear troopsushi Michaelwave Beta Nexus Emma Rosabelle Saneko Hazel Darkn joshyflip Dolphman Wiz ChrisFurry Spitfya 
         </li>
     </ul>
   </section>
