--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
   <section id="media" class="media">
     <h2>Media</h2>
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/ssz.png" alt="Gameplay Screenshot 1" />
-    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/mmz.png" alt="Gameplay Screenshot 1" />
+    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/mmz.png" alt="Gameplay Screenshot 2" />
+    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/jjz.png" alt="Gameplay Screenshot 2" />
+
   </section>
 
   <section id="download" class="download">
