--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <h2>Media</h2>
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/ssz.png" alt="Gameplay Screenshot 1" />
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/mmz.png" alt="Gameplay Screenshot 2" />
-    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/jjz.png" alt="Gameplay Screenshot 2" />
-
+    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/jjz.png" alt="Gameplay Screenshot 3" />
+    <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/wwz.png" alt="Gameplay Screenshot 4" />
   </section>
 
   <section id="download" class="download">
