--- a/index.html
+++ b/index.html
@@ -122,8 +122,21 @@
     <h2>Credits</h2>
     <ul>
       <li><strong>Original Sonic Hoshi credits:</strong> 
-        Glace Sue SpookyGuga Nuclear troopsushi Michaelwave Beta Nexus Emma Rosabelle Saneko Hazel Darkn joshyflip Dolphman Wiz ChrisFurry Spitfya 
-        </li>
+      <li>Glace Sue: Programming / Writing / Level Design / Music and Sprites. </li>
+      <li>SpookyGuga: Bosses / Cutscenes / Programming and Sprites.</li>
+      <li>Nuclear: Music.</li>
+      <li>troopsushi: Object Art / Background Art / Characters Art / Promo Logo, Writing.</li>
+      <li>Michaelwave: TileSet Assistance / TileSet Art.</li>
+      <li>Beta Nexus: TitleCard Design And Sprites.</li>
+      <li>Emma: Music / Character Sprites.</li>
+      <li>Rosabelle: Character Sprites, Promo Art.</li>
+      <li>Hazel: Testing.</li>
+      <li>darkn: Bug Fixing, Code Assistance.</li>
+      <li>joshyflip: Background Sprites / Character Sprites / Programming.</li>
+      <li>Wiz: Character Sprites..</li>
+      <li>ChrisFurry: Misc Sprites.</li>
+      <li>Spitfya: General Sprites / Effects / Quality Control.</li>
+      </li>
     </ul>
   </section>
 
