--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/logo.png" alt="Sonic Hoshi DX Logo" style="max-width: 70%; height: auto;">
+  <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/logo.png" alt="Sonic Hoshi DX Logo" style="max-width: 70%; height: 70%;">
   <style>
     body {
       margin: 0;
