--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/logo.png" alt="Sonic Hoshi DX Logo" style="max-width: 70%; height: 70%;">
+  <div class="logo">
+  <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/logo.png" alt="Sonic Hoshi DX Logo">
+  </div>
   <style>
+    .logo {
+    text-align: center;
+    margin-top: 30px;
+    }
+
+    .logo img {
+      max-width: 300px;
+      width: 80%;
+      height: auto;
+    }
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
