--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
   <nav>
     <a href="#story">Story</a>
+    <a href="#characters">Characters</a>
     <a href="#features">Features</a>
     <a href="#media">Media</a>
     <a href="#download">Download</a>
