--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     margin-top: 30px;
     }
 
+    .logo-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+    background-color: #000;
+    background-image: 
+      linear-gradient(45deg, #444 25%, transparent 25%),
+      linear-gradient(-45deg, #444 25%, transparent 25%),
+      linear-gradient(45deg, transparent 75%, #444 75%),
+      linear-gradient(-45deg, transparent 75%, #444 75%);
+    background-size: 40px 40px;
+    background-position: 0 0, 0 20px, 20px -20px, -20px 0px;
+    }
+
+    .logo-banner img {
+      max-width: 300px;
+      width: 80%;
+      height: auto;
+    }
+
+
     .logo img {
       max-width: 300px;
       width: 80%;
