--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
       margin: auto;
     }
     h2 {
+      text-align: center;
       color: #800080;
       font-size: 2em;
       margin-bottom: 20px;
     }
     .media img {
       width: 100%;
+      text-align: center;
       max-width: 600px;
       margin: 20px 0;
       border-radius: 10px;
@@ -102,9 +104,11 @@
     .credits ul {
       list-style: none;
       padding: 0;
+      text-align: center;
     }
     .credits li {
       margin: 5px 0;
+      text-align: center;
     }
   </style>
 </head>
