--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
     }
 
     .logo-banner {
-      background-image: 
-        linear-gradient(45deg, #444 25%, transparent 25%),
-        linear-gradient(-45deg, #444 25%, transparent 25%),
-        linear-gradient(45deg, transparent 75%, #444 75%),
-        linear-gradient(-45deg, transparent 75%, #444 75%);
-      background-size: 40px 40px;
-      background-position: 0 0, 0 20px, 20px -20px, -20px 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 40px 0;
+      position: relative;
+      background-image: 
+        linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%),
+        linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, rgba(255, 255, 255, 0.15) 75%),
+        linear-gradient(-45deg, transparent 75%, rgba(255, 255, 255, 0.15) 75%),
+        url('https://gamejolt.com/games/sonichoshi/751415'); /* Replace with your background image */
+      background-size: 40px 40px, 40px 40px, 40px 40px, 40px 40px, cover;
+      background-position: 0 0, 0 20px, 20px -20px, -20px 0px, center;
+      background-repeat: repeat, repeat, repeat, repeat, no-repeat;
+      background-blend-mode: normal, normal, normal, normal, overlay;
     }
 
     .logo-banner img {
