--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%),
         linear-gradient(45deg, transparent 75%, rgba(255, 255, 255, 0.15) 75%),
         linear-gradient(-45deg, transparent 75%, rgba(255, 255, 255, 0.15) 75%),
-        url('https://gamejolt.com/games/sonichoshi/751415'); /* Replace with your background image */
+        url('https://gamejolt.com/games/sonichoshi/751415'); 
       background-size: 40px 40px, 40px 40px, 40px 40px, 40px 40px, cover;
       background-position: 0 0, 0 20px, 20px -20px, -20px 0px, center;
       background-repeat: repeat, repeat, repeat, repeat, no-repeat;
@@ -77,19 +77,19 @@
     .curtain {
       position: fixed;
       top: 0;
-      width: 80px; /* adjust to image width */
+      width: 80px; 
       height: 100%;
       background-image: url('/path/to/your/curtain.png');
       background-repeat: repeat-y;
       background-size: cover;
       animation: scrollCurtain 4s linear infinite;
       z-index: 1000;
-      pointer-events: none; /* allows clicks through */
+      pointer-events: none; 
     }
 
     .curtain.left {
       left: 0;
-      transform: scaleX(-1); /* mirror for left side */
+      transform: scaleX(-1); 
     }
 
     .curtain.right {
