--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       top: 0;
       width: 80px; 
       height: 100%;
-      background-image: url('/path/to/your/curtain.png');
+      background-image: url('https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/curtain.png');
       background-repeat: repeat-y;
       background-size: cover;
       animation: scrollCurtain 4s linear infinite;
