--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
   </div>
 
   <div class="section">
-    <h2>About the Game</h2>
+    <h2>ABOUT THE GAME</h2>
     <p>
       Sonic Hoshi DX is a complete reimagining of the original Sonic Hoshi project, rebuilt from the ground up to deliver a richer and more polished experience. Dive into a brand new adventure across Starshine Island and beyond as you race to stop Dr. Eggman from altering reality itself.
     </p>
   </div>
 
   <div class="section screenshots">
-    <h2>Screenshots</h2>
+    <h2>SCREENSHOTS</h2>
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/ssz.png" alt="Screenshot 1" />
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/mmz.png" alt="Screenshot 2" />
     <img src="https://raw.githubusercontent.com/sonichoshi/sonichoshidx.github.io/main/assets/jjz.png" alt="Screenshot 3" />
   </div>
 
   <div class="section download">
-    <h2>Download</h2>
+    <h2>DOWNLOAD</h2>
     <p>Try the original Sonic Hoshi now!</p>
     <a href="https://gamejolt.com/games/sonichoshi/751415" target="_blank">Download on Game Jolt</a>
   </div>
